--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <span>Ano:</span>
         <select id="yearSelect"></select>
         <button type="button" id="btnAddYear" class="btn-year">+ Ano</button>
+        <button type="button" id="btnDeleteYear" class="btn-outline" style="margin-left:10px;border-color:#ef4444;color:#ef4444;">Excluir ano</button>
       </div>
 
       <!-- Informações do usuário logado -->
