--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     gtag('config', 'G-R8B1DTKENL');
   </script>
 
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6124393666586707"
+     crossorigin="anonymous"></script>
+
   <title>Meu Dinheiro na Conta – Controle financeiro anual simples</title>
 
   <!-- Favicons -->
