--- a/acesso.html
+++ b/acesso.html
@@ -15,6 +15,11 @@
     gtag('config', 'G-R8B1DTKENL');
   </script>
 
+  <!-- Google AdSense (Auto Ads) -->
+  <script async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6124393666586707"
+          crossorigin="anonymous"></script>
+
   <title>Meu Dinheiro na Conta – Acesso</title>
 
   <!-- Favicons -->
